--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .header {
     height          : 795px;
     width           : 100%;
-    background-image: url('/Images/bg.jpg');
+    background-image: url('/Musicology-website/Images/bg.jpg');
     background-size : cover;
     position        : relative;
 }
@@ -95,7 +95,7 @@ body {
 /* *****************************Tour*******************************  */
 
 .tour {
-    background        : url(/Images/tour.jpg) no-repeat;
+    background        : url(/Musicology-website/Images/tour.jpg) no-repeat;
     background-size   : cover;
     margin            : auto;
     text-align        : center;
@@ -153,7 +153,7 @@ body {
 /* *****************************Pricing*******************************  */
 
 .brock {
-    background        : url(/Images/price.jpg) no-repeat;
+    background        : url(/Musicology-website/Images/price.jpg) no-repeat;
     background-size   : cover;
     text-align        : center;
     color             : #fff;
@@ -230,7 +230,7 @@ body {
 }
 
 .adance .all {
-    background     : url(/Images/amazing.jpg) no-repeat;
+    background     : url(/Musicology-website/Images/amazing.jpg) no-repeat;
     background-size: cover;
 }
 
@@ -271,7 +271,7 @@ body {
 }
 
 .best .all {
-    background        : url(/Images/best.jpg) no-repeat;
+    background        : url(/Musicology-website/Images/best.jpg) no-repeat;
     background-size   : cover;
     /* background     : rgb(231, 92, 10); */
 }
@@ -345,7 +345,7 @@ body {
 
 .herbert {
     width          : 100%;
-    background     : url(/Images/8.PNG) no-repeat;
+    background     : url(/Musicology-website/Images/8.PNG) no-repeat;
     background-size: cover;
 }
 
@@ -386,7 +386,7 @@ body {
 .subscribe {
     width           : 100%;
     height          : 590px;
-    background-image: url(/Images/7.jpg);
+    background-image: url(/Musicology-website/Images/7.jpg);
     background-size : cover;
     display         : flex;
     flex-direction  : column;
