--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
 
 /* *****************************header*******************************  */
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Oswald', sans-serif !important;
 }
